# jaxedith

./: CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.md  installation.md
docs/explanation/: architecture.md  variants.md
src/jaxEDITH/: __init__.py  config.py  core.py  count_rates.py  observation.py  scene.py  solver.py
src/jaxedith/: __init__.py  components.py  config.py  core.py  count_rates.py  equations.py  etc.py  intermediates.py  observation.py  primitives.py  public.py  scene.py  solver.py  zodi.py
tests/: conftest.py  test_components.py  test_from_system.py  test_integration.py  test_intermediates.py  test_jaxEDITH.py  test_jax_etc.py  test_observation_scene.py  test_public.py  test_zodi.py
